amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/missing-directive-definition.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/missing-directive-definition.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-ast
  Message: Directive myDirective is not declared
  Severity: Violation
  Target: 
  Property: 
  Range: [(5,16)-(5,41)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive myDirective cannot be applied to scalar 'MyScalar'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/missing-directive-definition.api.graphql#/declares/scalar/MyScalar
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(5,16)-(5,41)]
  Location: 
